Refactor code structure for improved readability and maintainability
Upgraded UI
New Risk Assessment
Added APache Spark
Did many things
Major Update